--- a/06_explore-obecless-projects.Rmd
+++ b/06_explore-obecless-projects.Rmd
@@ -442,7 +442,7 @@ if(file.exists(prj_geoname_validated_file)) {
                 select(obec = obec_id, obec_nazev) %>% 
                 distinct()) %>% 
     mutate(prjtxt = if_else(kde == "anotace", prj_anotace, prj_nazev),
-           orp_obec = str_detect(prjtxt, paste("ORP", obec_nazev)),
+           orp_obec = str_detect(prjtxt, paste("(ORP|rozšířenou působností)", obec_nazev)),
            obec_is_sidlo = str_sub(p_sidlo_id, 6, 11) == obec,
            okres_obec = str_detect(prjtxt, paste("[Oo]kres([eu]?)", obec_nazev)))
   
