--- a/06_explore-obecless-projects.Rmd
+++ b/06_explore-obecless-projects.Rmd
@@ -606,8 +606,8 @@ dtl_noobec_basic <- dtl_noobec %>%
   distinct() %>% 
   left_join(prj_meta) %>% 
   left_join(vyzvy) %>% 
-  left_join(dtl_noobec_geocount %>% distinct(prj_id, minlevel, n_units)) %>% 
-  select(-op_tnum.x, -op_tnum.y, -vyzva_cislo, -prj_num) %>% 
+  left_join(dt_geostructure_byprj) %>% 
+  select(-op_tnum, -vyzva_cislo, -prj_num) %>% 
   left_join(orgs %>% 
               select(p_ico = ico, druhuj_nazev, poddruhuj_nazev) %>% 
               distinct(p_ico, .keep_all = T)) %>% 
