--- a/03_explore.Rmd
+++ b/03_explore.Rmd
@@ -299,7 +299,7 @@ n_multilevel
 
 source("check-geo-hierarchy-fns.R")
 
-data_geocheck_file <- here::here("data-processed", "dt-geohierachy-check.parquet")
+data_geocheck_file <- here::here("data-processed", "dt-geohierarchy-check.parquet")
 
 if (file.exists(data_geocheck_file)) {
   data_geocheck <- read_parquet(data_geocheck_file)
