fix MAS detection so as not to catch MAP too

--- a/06_explore-obecless-projects.Rmd
+++ b/06_explore-obecless-projects.Rmd
@@ -640,8 +640,8 @@ dt_noobec_basic <- dtl_noobec %>%
 ### Některé markery
 
 ```{r mas-vyzvy}
-vyzvy_map_mas <- vyzvy %>%
-  filter(str_detect(vyzva_nazev, "[Mm]ístní akční|[Mm]ístních akčních|MAS"),
+vyzvy_mas <- vyzvy %>%
+  filter(str_detect(vyzva_nazev, "[Mm]ístní akční sk|[Mm]ístních akčních sk|MAS"),
          str_detect(vyzva_id, "^0[1-9]_"))
 ```
 
